2003-06-27  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel4.c (tf_msgrcv): Strengthen test against valid
	premature returns a bit more.

2003-06-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/librt-cancellation.c: Move __pthread_unwind
	definition to the front.

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Rename
	the cleanup functions to make the names unique.  Fix dwarf opcode
	un unwind table.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Rename cleanup
	functions to make the names unique.  Fix CFA offset for two blocks.

2003-06-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread.h (class __pthread_cleanup_class): Add
	missing closing braces.
	Patch by Christophe Saout <christophe@saout.de>.

2003-06-24  Roland McGrath  <roland@redhat.com>

	* pthread_mutex_trylock.c (__pthread_mutex_trylock): Typo fix.

2003-06-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/bits/posix_opt.h: New file.
	* sysdeps/unix/sysv/linux/x86_64/bits/posix_opt.h: New file.

	* pthreadP.h: Declare __find_thread_by_id.
	* allocatestack.c [HP_TIMING_AVAIL]: Define __find_thread_by_id.
	* pthread_clock_gettime.c: Allow using other thread's clock.
	* pthread_clock_settime.c: Likewise.
	* sysdeps/pthread/pthread_getcpuclockid.c: Likewise.
	* Makefile: Add rules to build and run tst-clock2.
	* tst-clock2.c: New file.

2003-06-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Rewrite
	to use exception-based cleanup handler.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Likewise.

	* tst-cond8.c (ch): Announce that we are done.

	* pthreadP.h (__pthread_mutex_cond_lock): Mark with internal_function.

	* tst-cancel17.c (tf): Retry aio_suspend in case of EINTR.
	Also test aio_suspend with timeout value.

2003-06-22  Ulrich Drepper  <drepper@redhat.com>

	* pthreadP.h: Mark __pthread_mutex_unlock_usercnt also hidden.